# haok

./: .gitignore  README.md  alfworld.ipynb  pyproject.toml
.chromadb/: chroma.sqlite3
data/bigbench/: dyck_languages.json  navigate.json  tracking_shuffled_five_objects.json  tracking_shuffled_three_objects.json  transform_choice_to_answer.py
haok/: README.md
haok/action_to_module/: agent.py  example.py  module_define.py  module_gen.py  output_parser.py  prompt.py
haok/base_agent/: action_to_module.py  cot.py  cot_with_haok.py  cot_with_tool.py  react.py  react_simple.py
haok/callbacks/: callback.py
haok/config/: config.py  settings.py
haok/database/: mongo.py
haok/exp1/: action_history.py  cal_reduction_rate.py  cot.py  cot_with_haok.py  cot_with_tool.py  react.py  read_results.py  task.py  test.py
haok/exp2/: README.md  alfworld_exp.py  alfworld_exp_langchain.py  extract_all_logs_to_plan.py  plan_extract_agent.py  plan_store.py  read_results.py  read_results_exp2.py  utils.py
haok/exp2/agent/: base.py  react.py
haok/exp2/envs/: alfworld.py  base.py
haok/exp2/prompts/: alfworld.py
haok/history/: action.py
haok/interpreter/: python.py  python_tool.py
haok/llm/: openai.py
haok/module/: module.py  module_store.py
haok/vector/: vector.py
result/exp1/cot/: dyck_languages.jsonl  dyck_languages_error.jsonl  navigate.jsonl  navigate_error.jsonl  navigate_old.jsonl  navigate_old_error.jsonl  tracking_shuffled_five_objects.jsonl  tracking_shuffled_five_objects_error.jsonl  tracking_shuffled_three_objects.jsonl  word_sorting.jsonl  (+2 more)
(+44 files in other folders)
