[tool.poetry]
name = "haok"
version = "0.1.0"
description = ""
authors = ["Bird <aflybird0@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
chromadb = "^0.4.23"
openai = "^1.12.0"
pydantic = "1.10.13"
langchain-openai = "^0.0.7"
pymongo = "^4.6.2"
langchain-experimental = "^0.0.52"
matplotlib = "^3.8.3"
jupyter = "^1.0.0"
gym = "^0.26.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.haok.masonry.api"
